--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "rollup-plugin-serve": "^1.0.1",
         "rollup-plugin-typescript2": "^0.25.3",
         "rollup-plugin-uglify": "^6.0.4",
+        "tslint": "^6.1.2",
+        "tslint-config-airbnb": "^5.11.2",
+        "tslint-sonarts": "^1.9.0",
         "typescript": "^3.7.4"
     }
 }
